src/style/Header.css
.Header_father {
  align-items: center;
  background-color: rgb(190, 190, 190);
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  padding: 1em;
}

.Header_image-and-name {
  align-items: center;
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
}

.Header_player-image {
  border-radius: 10em;
}

.Header_player-name {
  font-size: 2em;
  padding-left: 1em;
}

.Header_score-text {
  font-size: 2em;
  padding-right: 2em;
}

.Header_score {
  display: flex;
  flex-wrap: row nowrap;
}

